src/assets/main.css
@import './theme.less';
@import './transition.css';

body {
    width: 100vw;
    height: 100vh;
    overflow: hidden;
    margin: 0;
}

#loading {
    position: absolute;
    width: 100vw;
    height: 100vh;
    overflow: hidden;
    margin: 0;
    opacity: 1;
    background-color: rgb(50, 50, 50);
    z-index: 9999;
    transition: opacity .25s;
}

#qinghe-guide {
    width: 100vw;
    height: 100vh;
    overflow: hidden;
    margin: 0;
    user-select: none;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

a {
    text-decoration: none;
    color: var(--secondary-font-color);
}

svg {
    fill: currentColor;
    color: var(--icon-svg-color);
}

input {
    border: none;
    outline: 0;
}

input::placeholder {
    color: var(--input-placeholder-color);
}

button {
    border: none;
    cursor: pointer;
}

:focus {
    outline: none;
}

::selection {
    background: var(--selection-background-color);
    border-radius: 4px;
}

::-webkit-scrollbar {
    width: 4px;
}
::-webkit-scrollbar-track {
    background: transparent;
}
::-webkit-scrollbar-thumb {
    background: var(--scrollbar-thumb-background-color);
    border-radius: 2px;
}
::-webkit-scrollbar-thumb:hover {
    background: var(--scrollbar-thumb-hover-background-color);
}

